--- a/InStock/InStock/ClientApp/src/app/get-items/get-items.component.html
+++ b/InStock/InStock/ClientApp/src/app/get-items/get-items.component.html
@@ -1,9 +1,9 @@
 <h1>Items</h1>
 
-<p *ngIf="!(items$ | async)"><em>Loading...</em></p>
-<!-- <p>
-  <a [routerLink]="['/add']" class="btn btn-primary float-right mb-3">New post</a>
-</p> -->
+<p *ngIf="!(items$ | async)"><em>Loading....</em></p>
+<p>
+  <a [routerLink]="['/add']" class="btn btn-primary float-right mb-3">Add Item</a>
+</p>
 
 <table class="table table-sm table-hover" *ngIf="(items$ | async)?.length>0">
   <thead>
@@ -22,14 +22,13 @@
   <tbody>
     <tr *ngFor="let item of (items$ | async)">
       <td>{{ item.id }}</td>
-      <!-- <td><a [routerLink]="['/blogpost/', blogPost.postId]">{{ blogPost.title }}</a></td> -->
-      <td>{{ item.name }}</td>
+      <td><a [routerLink]="['/item/', item.id]">{{ item.name }}</a></td> 
       <td>{{ item.sku }}</td>
       <td>{{"$" + item.price }}</td>
       <td>{{ item.inStock }}</td>
       <td>{{ item.quantity }}</td>
-      <!-- <td><a [routerLink]="['/blogpost/edit/', blogPost.postId]" class="btn btn-primary btn-sm float-right">Edit</a></td>
-      <td><a [routerLink]="" (click)="delete(blogPost.postId)" class="btn btn-danger btn-sm float-right">Delete</a></td> -->
+       <td><a [routerLink]="['/edit/', item.id]" class="btn btn-primary btn-sm float-right">Edit</a></td> 
+      <td><a [routerLink]="" (click)="delete(item.id)" class="btn btn-danger btn-sm float-right">Delete</a></td>  
     </tr>
   </tbody>
 </table>
