--- a/InStock/InStock/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/InStock/InStock/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -27,11 +27,15 @@
           >
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
-        
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/item-search']"
+              >Search Items</a
+            >
+          </li>
          
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/get-items']"
-              >Get Items</a
+              >Manage Items</a
             >
           </li>
         </ul>
