--- a/InStock/InStock/ClientApp/src/app/item-search/item-search.component.html
+++ b/InStock/InStock/ClientApp/src/app/item-search/item-search.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="form" (ngSubmit)="searchText()"  #formDir="ngForm" novalidate >
     <div class="form-group row">
-        <label class="control-label col-md-12" for="search">Quantity</label>
+        <label class="control-label col-md-12" for="search">Search For an Item</label>
         <div class="col-md-4">
             <input class="form-control" type="text" formControlName="search">
         </div>
