--- a/InStock/InStock/ClientApp/src/app/add-edit-shops/add-edit-shops.component.html
+++ b/InStock/InStock/ClientApp/src/app/add-edit-shops/add-edit-shops.component.html
@@ -1,1 +1,20 @@
-<p>add-edit-shops works!</p>
+<h1>{{title}}</h1>
+<h3>Shop</h3>
+<div class="container">
+<form [formGroup]="shopForm" (ngSubmit)="save()"  #formDir="ngForm" novalidate >
+    <div class="form-group row">
+        <label class=" control-label col-md-12 ">Shop Name</label>
+        <div class="col-md-4">
+            <input class="form-control" type="text" formControlName="name" >
+        </div>
+        <span class="text-danger" *ngIf="name.invalid && formDir.submitted">
+            Shop Name is required.
+        </span>
+    </div>
+    
+    <div class="form-group">
+        <button type="submit" class="btn btn-success ">Save</button>
+        <button class="btn btn-secondary float-left"(click)="cancel()">Cancel</button>
+    </div>
+</form>
+</div>
