--- a/InStock/InStock/ClientApp/src/app/get-items/get-items.component.html
+++ b/InStock/InStock/ClientApp/src/app/get-items/get-items.component.html
@@ -2,7 +2,7 @@
 
 <p *ngIf="!(items$ | async)"><em>Loading....</em></p>
 <p>
-  <a [routerLink]="['/add']" class="btn btn-primary float-right mb-3">Add Item</a>
+  <a [routerLink]="['item/add']" class="btn btn-primary float-right mb-3">Add Item</a>
 </p>
 
 <table class="table table-sm table-hover" *ngIf="(items$ | async)?.length>0">
@@ -25,7 +25,7 @@
       <td>{{"$" + item.price }}</td>
       <td>{{ item.inStock }}</td>
       <td>{{ item.quantity }}</td>
-       <td><a [routerLink]="['/edit/', item.id]" class="btn btn-primary btn-sm float-right">Edit</a></td> 
+       <td><a [routerLink]="['item/edit/', item.id]" class="btn btn-primary btn-sm float-right">Edit</a></td> 
       <td><a [routerLink]="" (click)="delete(item.id)" class="btn btn-danger btn-sm float-right">Delete</a></td>  
     </tr>
   </tbody>
