--- a/InStock/InStock/ClientApp/src/app/get-shops/get-shops.component.html
+++ b/InStock/InStock/ClientApp/src/app/get-shops/get-shops.component.html
@@ -2,7 +2,7 @@
 
 <p *ngIf="!(shops$ | async)"><em>Loading....</em></p>
 <p>
-  <a [routerLink]="['/add-shop']" class="btn btn-primary float-right mb-3">Add Shop</a>
+  <a [routerLink]="['/add-shop/']" class="btn btn-primary float-right mb-3">Add Shop</a>
 </p>
 
 <table class="table table-sm table-hover" *ngIf="(shops$ | async)?.length>0">
