--- a/InStock/InStock/ClientApp/src/app/get-shop/get-shop.component.html
+++ b/InStock/InStock/ClientApp/src/app/get-shop/get-shop.component.html
@@ -1,1 +1,13 @@
-<p>get-shop works!</p>
+<ng-container *ngIf="(shop$ | async) as shop; else loading">
+
+    <h1>{{ shop.name }}</h1>
+    <h1>{{ shop.contactNumber }}</h1>
+    <h1>{{ shop.address }}</h1>
+    <h1>{{ shop.contactNumber }}</h1>
+    <h1>{{ shop.lat }}</h1>
+    <h1>{{ shop.long }}</h1>
+    
+    
+  
+  </ng-container>
+  <ng-template #loading>Loading…</ng-template>
