--- a/InStock/InStock/ClientApp/src/app/get-items/get-items.component.html
+++ b/InStock/InStock/ClientApp/src/app/get-items/get-items.component.html
@@ -1,8 +1,8 @@
 <h1>Items</h1>
 
 <p *ngIf="!(items$ | async)"><em>Loading....</em></p>
-<p>
-  <a [routerLink]="['/add']" class="btn btn-primary float-right mb-3">Add Item</a>
+<p>items
+  <a [routerLink]="['/add-item/']" class="btn btn-primary float-right mb-3">Add Item</a>
 </p>
 
 <table class="table table-sm table-hover" *ngIf="(items$ | async)?.length>0">
@@ -13,6 +13,7 @@
       <th>Price</th>
       <th>Available</th>
       <th>Quantity</th>
+      <th>Shop</th>
       <th></th>
       <th></th>
       
@@ -25,7 +26,8 @@
       <td>{{"$" + item.price }}</td>
       <td>{{ item.inStock }}</td>
       <td>{{ item.quantity }}</td>
-       <td><a [routerLink]="['/edit/', item.id]" class="btn btn-primary btn-sm float-right">Edit</a></td> 
+      <td>{{ item.shop.name }}</td>
+       <td><a [routerLink]="['/edit-item/', item.id]" class="btn btn-primary btn-sm float-right">Edit</a></td> 
       <td><a [routerLink]="" (click)="delete(item.id)" class="btn btn-danger btn-sm float-right">Delete</a></td>  
     </tr>
   </tbody>
