--- a/InStock/InStock/ClientApp/src/app/add-edit-items/add-edit-items.component.html
+++ b/InStock/InStock/ClientApp/src/app/add-edit-items/add-edit-items.component.html
@@ -11,47 +11,8 @@
             Name is required.
         </span>
     </div>
-    <div class="form-group row">
-        <label class="control-label col-md-12" for="sku">SKU</label>
-        <div class="col-md-4">
-            <input class="form-control" type="number" formControlName="sku" >
-        </div>
-        <span class="text-danger" *ngIf="sku.invalid && formDir.submitted">
-            SKU is required
-        </span>
-    </div>
-    <div class="form-group row">
-        <label class="control-label col-md-12" for="price">Price</label>
-        <div class="col-md-4">
-            <input class="form-control" type="number" formControlName="price">
-        </div>
-        <span class="text-danger" *ngIf="price.invalid && formDir.submitted">
-            price is required
-        </span>
-    </div>
-    <div class="form-group row">
-        <label class="control-label col-md-12" for="inStock">Availability</label>
-        <div class="col-md-4">
-            <select class="form-control" data-val="true" formControlName="inStock">
-                <option value="">--Select Availablity--</option>
-                <option value="True">True</option>
-                <option value="False">False</option>
-            </select>
-        </div>
-        <span class="text-danger" *ngIf="inStock.invalid && formDir.submitted">
-            Availability is required
-        </span>
-    </div>
-    <div class="form-group row">
-        <label class="control-label col-md-12" for="quantity">Quantity</label>
-        <div class="col-md-4">
-            <input class="form-control" type="number" formControlName="quantity">
-        </div>
-        <span class="text-danger" *ngIf="quantity.invalid && formDir.submitted">
-            quantity is required
-        </span>
-    </div>
-    <div class="form-group row">
+
+    <!-- <div class="form-group row">
         <label class="control-label col-md-12" for="quantity">Shop</label>
         <div class="col-md-4">
             <select class="form-control" type="number" formControlName="shopId" >
@@ -64,7 +25,7 @@
         <span class="text-danger" *ngIf="shopId.invalid && formDir.submitted">
             Shop is required
         </span>
-    </div>
+    </div> -->
 
 
     <div class="form-group">
