--- a/InStock/InStock/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/InStock/InStock/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -43,6 +43,11 @@
               >Manage Shops</a
             >
           </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/get-inventories']"
+              >Manage Inventory</a
+            >
+          </li>
         </ul>
       </div>
     </div>
