Added Angular Email

--- a/InStock/InStock/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/InStock/InStock/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -48,6 +48,11 @@
               >Manage Inventory</a
             >
           </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/mail']"
+              >Send MAIL</a
+            >
+          </li>
         </ul>
       </div>
     </div>
