subscription done, includes subscribe, select email address and sending email

--- a/InStock/InStock/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/InStock/InStock/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -49,8 +49,8 @@
             >
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/mail']"
-              >Send MAIL</a
+            <a class="nav-link text-dark" [routerLink]="['/add-email']"
+              >Subscribe</a
             >
           </li>
         </ul>
