--- a/InStock/InStock/ClientApp/src/app/send-email/send-email.component.html
+++ b/InStock/InStock/ClientApp/src/app/send-email/send-email.component.html
@@ -1,12 +1,30 @@
 <h1>Email</h1>
 <div class="container">
 <form [formGroup]="mailForm" (ngSubmit)="sendEmail()"  #formDir="ngForm" novalidate >
-    <div class="form-group row">
+    <!-- no drop list -->
+    <!-- <div class="form-group row">
         <label class=" control-label col-md-12 ">EmailAddress</label>
         <div class="col-md-4">
             <input class="form-control" type="text" formControlName="emailAddress" >
+        </div> -->
+        <!-- droplist --> 
+        <div class="form-group row">
+            <label class="control-label col-md-12" for="EmailAddress">EmailAddress</label>  
+            <div class="col-md-4">
+                
+            <select  class="form-control"  formControlName="emailAddress" required >  
+              <option value="">--Select--</option>  
+              <option *ngFor="let email of (emails$ | async)" >  
+                  {{email.emailAddress}}  
+              </option>  
+        </select>  
+         </div>
+         <span class="text-danger" *ngIf="emailAddress.invalid && formDir.submitted">
+            EmailAddress Name is required.
+        </span>
         </div>
-    </div>
+
+   
     <div class="form-group row">
         <label class="control-label col-md-12" >Subject</label>
         <div class="col-md-4">
