--- a/InStock/InStock/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/InStock/InStock/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -53,6 +53,11 @@
               >Subscribe</a
             >
           </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/send-email']"
+              >Email Subscribers</a
+            >
+          </li>
         </ul>
       </div>
     </div>
