--- a/InStock/InStock/ClientApp/src/app/add-edit-inventory/add-edit-inventory.component.html
+++ b/InStock/InStock/ClientApp/src/app/add-edit-inventory/add-edit-inventory.component.html
@@ -1,1 +1,63 @@
-<p>add-edit-inventory works!</p>
+<h1>{{title}}</h1>
+<h3>Inventory</h3>
+<div class="container">
+<form [formGroup]="inventoryForm" (ngSubmit)="save()"  #formDir="ngForm" novalidate >
+    <div class="form-group row">
+        <label class="control-label col-md-12" for="available">Availability</label>
+        <div class="col-md-4">
+            <select class="form-control" data-val="true" formControlName="available">
+                <option  [ngValue]="">--Select Availablity--</option>
+                <option [ngValue]="1">True</option>
+                <option [ngValue]="0">False</option>
+            </select>
+        </div>
+        <span class="text-danger" *ngIf="available.invalid && formDir.submitted">
+            Availability is required
+        </span>
+    </div>
+    <div class="form-group row">
+        <label class="control-label col-md-12" for="quantity">Quantity</label>
+        <div class="col-md-4">
+            <input class="form-control" type="number" formControlName="quantity" >
+        </div>
+        <span class="text-danger" *ngIf="quantity.invalid && formDir.submitted">
+            Quantity is required
+        </span>
+    </div>
+    <div class="form-group row">
+        <label class="control-label col-md-12" for="shopId">Select Shop</label>
+        <div class="col-md-4">
+            <select class="form-control" type="number" formControlName="shopId" >
+                <option>Select</option>
+                <option  *ngFor="let shop of  (shops$ | async)" [ngValue]=shop.shopId>
+                    {{shop.name}}
+                </option>
+            </select>
+       </div>
+        <span class="text-danger" *ngIf="shopId.invalid && formDir.submitted">
+            Please select a shop
+        </span>
+    </div>
+    <div class="form-group row">
+        <label class="control-label col-md-12" for="itemId">Select An Item To Add</label>
+        <div class="col-md-4">
+            <select class="form-control" type="number" formControlName="itemId" >
+                <option>Select</option>
+                <option  *ngFor="let item of  (items$ | async)" [ngValue]=item.id>
+                    {{item.name}}
+                </option>
+            </select>
+       </div>
+        <span class="text-danger" *ngIf="itemId.invalid && formDir.submitted">
+            Please select an Item
+        </span>
+    </div>
+   
+   
+
+    <div class="form-group">
+        <button type="submit" class="btn btn-success ">Save</button>
+        <button class="btn btn-secondary float-left"(click)="cancel()">Cancel</button>
+    </div>
+</form>
+</div>
