--- a/InStock/InStock/ClientApp/src/app/add-edit-items/add-edit-items.component.html
+++ b/InStock/InStock/ClientApp/src/app/add-edit-items/add-edit-items.component.html
@@ -7,26 +7,14 @@
         <div class="col-md-4">
             <input class="form-control" type="text" formControlName="name" >
         </div>
+        <label class=" control-label col-md-12 ">Item Image</label>
+        <div class="col-md-4">
+            <input class="form-control" type="file" (change)="imageInputChanged($event)">
+        </div>
         <span class="text-danger" *ngIf="name.invalid && formDir.submitted">
             Name is required.
         </span>
     </div>
-
-    <!-- <div class="form-group row">
-        <label class="control-label col-md-12" for="quantity">Shop</label>
-        <div class="col-md-4">
-            <select class="form-control" type="number" formControlName="shopId" >
-                <option>Select</option>
-                <option  *ngFor="let shop of  (shops$ | async)" [ngValue]=shop.shopId>
-                    {{shop.name}}
-                </option>
-            </select>
-       </div>
-        <span class="text-danger" *ngIf="shopId.invalid && formDir.submitted">
-            Shop is required
-        </span>
-    </div> -->
-
 
     <div class="form-group">
         <button type="submit" class="btn btn-success ">Save</button>
