--- a/InStock/InStock/ClientApp/src/app/add-edit-items/add-edit-items.component.html
+++ b/InStock/InStock/ClientApp/src/app/add-edit-items/add-edit-items.component.html
@@ -9,6 +9,7 @@
         </div>
         <label class=" control-label col-md-12 ">Item Image</label>
         <div class="col-md-4">
+            <img>
             <input class="form-control" type="file" (change)="imageInputChanged($event)">
         </div>
         <span class="text-danger" *ngIf="name.invalid && formDir.submitted">
