--- a/InStock/InStock/ClientApp/src/app/get-single-item/get-item.component.html
+++ b/InStock/InStock/ClientApp/src/app/get-single-item/get-item.component.html
@@ -2,7 +2,7 @@
 
     <h1>{{ item.name }}</h1>
 
-    <img ng-src="data:image/JPEG;base64,{{item.image}}" />
+    <img src="{{imgData}}" width="100" height="100" />
   
   </ng-container>
   <ng-template #loading>Loading…</ng-template>
