--- a/InStock/InStock/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/InStock/InStock/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,9 +1,9 @@
-<header>
+<header >
   <nav
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
-    <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">InStock</a>
+    <div class="container ">
+      <a class="navbar-brand " [routerLink]="['/']">InStock</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -20,13 +20,7 @@
         [ngClass]="{ show: isExpanded }"
       >
         <ul class="navbar-nav flex-grow">
-          <li
-            class="nav-item"
-            [routerLinkActive]="['link-active']"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
-          </li>
+          
          
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/get-items']"
@@ -52,7 +46,24 @@
             <a class="nav-link text-dark" [routerLink]="['/send-email']"
               >Email Subscribers</a
             >
+
           </li>
+          <!-- <mat-card class="result">
+            <mat-card-content>
+              <h2 class="example-h2">Result</h2>
+          
+              <section class="example-section">
+                <mat-slide-toggle
+                    class="example-margin"
+                    [color]="color"
+                    [checked]="checked"
+                    [disabled]="disabled">
+                  Slide me!
+                </mat-slide-toggle>
+              </section>
+            </mat-card-content>
+          </mat-card> -->
+         
         </ul>
       </div>
     </div>
