--- a/InStock/InStock/ClientApp/src/app/add-edit-items/add-edit-items.component.html
+++ b/InStock/InStock/ClientApp/src/app/add-edit-items/add-edit-items.component.html
@@ -7,10 +7,11 @@
         <div class="col-md-4">
             <input class="form-control" type="text" formControlName="name" >
         </div>
-        <label class=" control-label col-md-12 ">Item Image</label>
-        <div class="col-md-4">
-            <img>
-            <input class="form-control" type="file" (change)="imageInputChanged($event)">
+        <label class=" control-label col-md-12 "></label>
+        <div class="col-md-8">
+            <label>Upload An Image (&lt; 1MB)</label><br/>
+            <input class="form-control" type="file" (change)="onFileChange($event)">
+            <a class="btn btn-danger" (click)="removeImage()" *ngIf="isImageSaved">Remove</a>
         </div>
         <span class="text-danger" *ngIf="name.invalid && formDir.submitted">
             Name is required.
@@ -18,7 +19,7 @@
     </div>
 
     <div class="form-group">
-        <button type="button" class="btn btn-success" (click)="save()">Save</button>
+        <button type="button"  [disabled]="!itemImage" class="btn btn-success" (click)="save()">Save</button>
         <button type="button" class="btn btn-secondary float-left" (click)="cancel()">Cancel</button>
     </div>
 </form>
