--- a/InStock/InStock/ClientApp/src/app/get-single-item/get-item.component.html
+++ b/InStock/InStock/ClientApp/src/app/get-single-item/get-item.component.html
@@ -1,8 +1,12 @@
 <ng-container *ngIf="(item$ | async) as item; else loading">
 
     <h1>{{ item.name }}</h1>
+    <img src="{{'data:image/jpg;base64,' + item.image}}" />
 
-    <img src="{{imgData}}" width="100" height="100" />
   
   </ng-container>
   <ng-template #loading>Loading…</ng-template>
+
+
+        
+
