Google Map API working, but no multiple markers

--- a/InStock/InStock/ClientApp/src/app/add-edit-shops/add-edit-shops.component.css
+++ b/InStock/InStock/ClientApp/src/app/add-edit-shops/add-edit-shops.component.css
@@ -1,3 +1,19 @@
 agm-map {
-    height: 300px;
+    height: 500px;
+  }
+
+  main {
+    display: grid;
+    grid-template-columns: minmax(400px, 400px) minmax(400px, 600px);
+  }
+  
+  main>div {
+    padding: 1em;
+  }
+  
+  .div-B {
+    grid-column: 2;
+  }
+  .div-A {
+    grid-column: 1;
   }
