--- a/InStock/InStock/ClientApp/src/app/get-shops/get-shops.component.html
+++ b/InStock/InStock/ClientApp/src/app/get-shops/get-shops.component.html
@@ -4,6 +4,15 @@
 <p>
   <a [routerLink]="['/add-shop/']" class="btn btn-primary float-right mb-3">Add Shop</a>
 </p>
+<!-- <agm-map [latitude]="lat" [longitude]="long">
+  <agm-marker *ngFor="let shop of (shops$ | async)">
+  [latitude]="shop.lat"
+  [longitude]="shop.long"
+  </agm-marker>
+</agm-map> -->
+<div #mapContainer id="map"></div>
+  
+
 
 <table class="table table-sm table-hover" *ngIf="(shops$ | async)?.length>0">
   <thead>
@@ -24,8 +33,9 @@
       <td>{{ shop.address }}</td>
       <td>{{ shop.lat }}</td>
       <td>{{ shop.long }}</td>
-       <td><a [routerLink]="['/edit-shop/', shop.shopId]" class="btn btn-primary btn-sm float-right">Edit</a></td> 
+ <td><a [routerLink]="['/edit-shop/', shop.shopId]" class="btn btn-primary btn-sm float-right">Edit</a></td> 
       <td><a [routerLink]="" (click)="delete(shop.shopId)" class="btn btn-danger btn-sm float-right">Delete</a></td>  
     </tr>
   </tbody>
+  
 </table>
