--- a/InStock/InStock/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/InStock/InStock/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,5 +1,56 @@
-<header >
-  <nav
+<!--Navbar-->
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">
+    InStock
+  </a>
+
+  <button class="navbar-toggler" type="button"
+  (click)="toggleNavbar()">
+<span class="navbar-toggler-icon"></span>
+</button>
+
+
+
+  <div class="collapse navbar-collapse"
+  [ngClass]="{ 'show': navbarOpen }">
+  <ul class="navbar-nav mr-auto">
+      <li class="nav-item " [routerLinkActive]="['link-active']">
+        <a class="nav-link " [routerLink]="['/get-items']"
+          >Manage Items</a
+        >
+      </li>
+      <li class="nav-item" [routerLinkActive]="['link-active']">
+        <a class="nav-link " [routerLink]="['/get-shops']"
+          >Manage Shops</a
+        >
+      </li>
+      <li class="nav-item" [routerLinkActive]="['link-active']">
+        <a class="nav-link" [routerLink]="['/get-inventories']"
+          >Manage Inventory</a
+        >
+      </li>
+      <li class="nav-item" [routerLinkActive]="['link-active']">
+        <a class="nav-link " [routerLink]="['/add-email']"
+          >Subscribe</a
+        >
+      </li>
+      <li class="nav-item" [routerLinkActive]="['link-active']">
+        <a class="nav-link " [routerLink]="['/send-email']"
+          >Email Subscribers</a
+        >
+
+      </li>
+    </ul>
+  </div>
+</nav>
+   
+      
+
+  
+</header>
+
+  <!-- <nav
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
     <div class="container ">
@@ -48,24 +99,10 @@
             >
 
           </li>
-          <!-- <mat-card class="result">
-            <mat-card-content>
-              <h2 class="example-h2">Result</h2>
           
-              <section class="example-section">
-                <mat-slide-toggle
-                    class="example-margin"
-                    [color]="color"
-                    [checked]="checked"
-                    [disabled]="disabled">
-                  Slide me!
-                </mat-slide-toggle>
-              </section>
-            </mat-card-content>
-          </mat-card> -->
          
         </ul>
       </div>
     </div>
-  </nav>
-</header>
+  </nav> -->
+
