--- a/InStock/InStock/ClientApp/src/app/send-email/send-email.component.html
+++ b/InStock/InStock/ClientApp/src/app/send-email/send-email.component.html
@@ -1,4 +1,7 @@
-<h1>Email</h1>
+<br>
+<br>
+<br>
+<h1>NewsLetter - ADMIN</h1>
 <div class="container">
 <form [formGroup]="mailForm" (ngSubmit)="sendEmail()"  #formDir="ngForm" novalidate >
         <div class="form-group row">
